--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -400,7 +400,10 @@ body.active { overflow: hidden; }
   opacity: 0.15;
   z-index: -1;
 }
-
+.hero-banner {
+  max-width: 100%; /* Ensures the logo doesn't overflow its container */
+  height: auto; /* Maintains aspect ratio */
+}
 .hero-subtitle { 
   font-size: var(--fs-5);
   font-weight: var(--fw-500);
